--- a/SettingsExample/Settings.xaml
+++ b/SettingsExample/Settings.xaml
@@ -38,15 +38,15 @@
                 <Label Grid.Row="2" Grid.Column="1">ENTER SOME NEW DATA</Label>
                 <Entry Grid.Row="3" Grid.Column="1" x:Name="someEntry"></Entry>
 
-                <!-- Brightness Slider -->
+                <!-- Brightness Slider2 -->
                 <Label Text="Brightness" Grid.Row="4" Grid.Column="1"/>
                 <Slider x:Name="brightnessSlider" Minimum="0" Maximum="1" Value="{Binding Brightness}" Grid.Row="5" Grid.Column="1"/>
 
-                <!-- Font Size Slider -->
+                <!-- Font Size Slider2 -->
                 <Label Text="Font Size" Grid.Row="6" Grid.Column="1" />
                 <Slider x:Name="fontSizeSlider" Minimum="10" Maximum="30" Value="{Binding FontSize}" Grid.Row="7" Grid.Column="1" />
 
-                <!-- Font Family Picker -->
+                <!-- Font Family Picker2 -->
                 <Label Text="Font Family" Grid.Row="8" Grid.Column="1"/>
                 <Picker x:Name="fontFamilyPicker" ItemsSource="{Binding FontFamilies}" SelectedItem="{Binding SelectedFontFamily}" Grid.Row="9" Grid.Column="1" />
 
